--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://github.com/nikhilrajnair/nikhilrajnair-portfolio/blob/master/css/style.css">
 </head>
 
 <body>
