--- a/index.html
+++ b/index.html
@@ -12,26 +12,33 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="https://github.com/nikhilrajnair/nikhilrajnair-portfolio/blob/master/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" crossorigin="anonymous" />    <link rel="stylesheet" type="text/css"
+        href="style/main.css">
 </head>
 
 <body>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <div class="resume-wrapper">
         <section class="profile section-padding">
             <div class="container">
                 <div class="picture-resume-wrapper">
                     <div class="picture-resume">
-                        <span><img src="https://avatars0.githubusercontent.com/u/9211987?v=3&s=460" alt="" /></span>
+                        <span><img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="" /></span>
                         <svg version="1.1" viewBox="0 0 350 350">
+
                             <defs>
                                 <filter id="goo">
                                     <feGaussianBlur in="SourceGraphic" stdDeviation="8" result="blur" />
-                                    <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 21 -9" result="cm" />
+                                    <feColorMatrix in="blur" mode="matrix"
+                                        values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 21 -9" result="cm" />
                                 </filter>
                             </defs>
+
+
                             <g filter="url(#goo)">
+
                                 <circle id="main_circle" class="st0" cx="171.5" cy="175.6" r="130" />
+
                                 <circle id="circle" class="bubble0 st1" cx="171.5" cy="175.6" r="122.7" />
                                 <circle id="circle" class="bubble1 st1" cx="171.5" cy="175.6" r="122.7" />
                                 <circle id="circle" class="bubble2 st1" cx="171.5" cy="175.6" r="122.7" />
@@ -43,14 +50,14 @@
                                 <circle id="circle" class="bubble8 st1" cx="171.5" cy="175.6" r="122.7" />
                                 <circle id="circle" class="bubble9 st1" cx="171.5" cy="175.6" r="122.7" />
                                 <circle id="circle" class="bubble10 st1" cx="171.5" cy="175.6" r="122.7" />
+
                             </g>
                         </svg>
                     </div>
                     <div class="clearfix"></div>
                 </div>
                 <div class="name-wrapper">
-                    <h1>Nikhil Raj A</h1>
-                    <!-- YOUR NAME AND LAST NAME  -->
+                    <h1>Nikhil <br />Raj A</h1><!-- YOUR NAME AND LAST NAME  -->
                 </div>
                 <div class="clearfix"></div>
                 <div class="contact-info clearfix">
@@ -59,98 +66,108 @@
                         <li>Mail</li>
                         <li>Web</li>
                         <li>Home</li>
-                        <li>Resume</li>
                     </ul>
                     <ul class="list-content ">
-                        <li>+91 8714406672</li>
-                        <!-- YOUR PHONE NUMBER  -->
-                        <li>nikhilrajnair.a@gmail.com</li>
-                        <!-- YOUR EMAIL -->
-                        <li><a href="http://nikhilrajnair.github.io">nikhilrajnair.github.io</a></li>
-                        <!-- YOUR WEBSITE  -->
-                        <li>Kochi,Kerala</li>
-                        <!-- YOUR STATE AND COUNTRY  -->
-                        <li><a href="http://nikhilrajnair.github.io/resume.pdf"><i class="fa fa-file-o fa-fw"></i></a></li>
+                        <li>+91 8714406672</li> <!-- YOUR PHONE NUMBER  -->
+                        <li>nikhilrajnair.a@gmail.com</li> <!-- YOUR EMAIL -->
+                        <li><a href="#">https://nikhilrajnair.github.io</a></li> <!-- YOUR WEBSITE  -->
+                        <li>Kerala</li> <!-- YOUR STATE AND COUNTRY  -->
                     </ul>
                 </div>
                 <div class="contact-presentation">
                     <!-- YOUR PRESENTATION RESUME  -->
-                    <p><span class="bold">Expert UI / UX developer with strong knowledge of HTML5, CSS3 and Javascript with frameworks like Bootstrap 3 and AngularJS </p>
-               </div>
-               <div class="contact-social clearfix">
-                  <ul class="list-titles">
-                     <li>Twitter</li>
-                     <li>Linkedin</li>
-                     <li>Codepen</li>
-                  </ul>
-                  <ul class="list-content">
-                     <!-- REMEMBER TO PUT THE URL ON THE HREF TAG  -->
-                     <li><a href="https://twitter.com/nikhilraj_a" target="_blank"><i class="fa fa-twitter fa-fw"></i>@nikhilraj_a</a></li>
-                     <!-- YOUR TWITTER USER  -->
-                     <li><a href="http://in.linkedin.com/in/nikhilrajnair" target="_blank"><i class="fa fa-linkedin fa-fw"></i>nikhilrajnair</a></li>
-                     <!-- YOUR DRIBBBLE USER  -->
-                     <li><a href="http://codepen.io/nikhilrajnair" target="_blank"><i class="fa fa-codepen fa-fw"></i>nikhilrajnair</a></li>
-                     <!-- YOUR BEHANCE USER  -->
-                  </ul>
-               </div>
+                    <p><span class="bold">Lorem</span> ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
+                        euismod congue nisi, nec consequat quam. In consectetur faucibus turpis eget laoreet. Sed nec
+                        imperdiet purus. </p>
+                </div>
+                <div class="contact-social clearfix">
+                    <ul class="list-titles">
+                        <li>Twitter</li>
+                        <!-- <li>Dribbble</li> -->
+                        <li>Codepen</li>
+                    </ul>
+                    <ul class="list-content">
+                        <!-- REMEMBER TO PUT THE URL ON THE HREF TAG  -->
+                        <li><a href="https://twitter.com/nikhilraj_a" target="_blank">@nikhilraj_a</a></li> <!-- YOUR TWITTER USER  -->
+                        <li><a href=""></a></li> <!-- YOUR DRIBBBLE USER  -->
+                        <li><a href="https://codepen.io/nikhilrajnair" target="_blank">nikhilrajnair</a></li> <!-- YOUR BEHANCE USER  -->
+                    </ul>
+                </div>
             </div>
-         </section>
-         <section class="experience section-padding">
+        </section>
+
+        <section class="experience section-padding">
             <div class="container">
-               <h3 class="experience-title">Experience</h3>
-               <div class="experience-wrapper">
-                  <div class="company-wrapper clearfix">
-                     <div class="experience-title">Codegreen Technologies</div>
-                     <!-- NAME OF THE COMPANY YOUWORK WITH  -->
-                     <div class="time">Jan 2016 - Present</div>
-                     <!-- THE TIME YOU WORK WITH THE COMPANY  -->
-                  </div>
-                  <div class="job-wrapper clearfix">
-                     <div class="experience-title">Front End Developer </div>
-                     <!-- JOB TITLE  -->
-                     <div class="company-description">
-                        <p>Working as a Front End Developer at Codegreen technologies LLP</p>
-                        <!-- JOB DESCRIPTION  -->
-                     </div>
-                  </div>
-                 
-               </div>
-               <!--Skill experience-->
-               <div class="section-wrapper clearfix">
-                  <h3 class="section-title">Skills</h3>
-                  <!-- YOUR SET OF SKILLS  -->
-                  <ul>
-                     <li class="skill-percentage">HTML / HTML5</li>
-                     <li class="skill-percentage">CSS / CSS3</li>
-                     <li class="skill-percentage">Javascript</li>
-                     <li class="skill-percentage">jQuery</li>
-                     <li class="skill-percentage">AngularJS</li>
-                     <li class="skill-percentage">Angular Material</li>
-                     <li class="skill-percentage">Bootstrap</li>
-                     <li class="skill-percentage">Git</li>
-                     <li class="skill-percentage">Photoshop</li>
-                  </ul>
-               </div>
-               <div class="section-wrapper clearfix">
-                  <h3 class="section-title">portfolio</h3>
-                  <!-- DESCRIPTION OF YOUR HOBBIES -->
-                  <div>
-                  Muthoot Healthcare - <a href="http://muthoothealthcare.com" target="_blank">www.muthoothealthcare.com</a><br>
-                  My Mai Group - <a href="http://mymaigroup.com" target="_blank">www.mymaigroup.com</a><br>
-                  ED Marshell Jewellers - <a href="http://edmarshelljewellers.com" target="_blank">www.edmarshelljewellers.com</a><br>
-                  Tecacts - <a href="http://tecacts.com" target="_blank">www.tecacts.com</a><br>
-                  Al-Khair Resturant - <a href="http://alkhair.in" target="_blank">www.alkhair.in</a><br>
-                  Midland Group Of Industries - <a href="http://midlandgroups.in" target="_blank">www.midlandgroups.in</a><br>
-                  Optic Zone - <a href="http://optic-zone.com" target="_blank">www.optic-zone.com</a><br>
-                  Clean land - <a href="http://clcsgroup.com" target="_blank">www.clcsgroup.com</a><br>
-                  Osier International - <a href="http://osier.co" target="_blank">www.osier.co</a><br>
-                  Taaza Restaurant - <a href="http://taazarestaurant.com" target="_blank">www.taazarestaurant.com</a><br>
-                  Velocity International - <a href="http://vintllc.com" target="_blank">www.vintllc.com</a><br>
-                  HRKP Associates - <a href="http://hrkpassociates.com" target="_blank">www.hrkpassociates.com</a><br>
-                  KIMS Ayurveda - <a href="http://kimsayurveda.com" target="_blank">www.kimsayurveda.com</a><br>
-                  </div>
-               </div>
+                <h3 class="experience-title">Experience</h3>
+
+                <div class="experience-wrapper">
+                    <div class="company-wrapper clearfix">
+                        <div class="experience-title">Company name</div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
+                        <div class="time">Nov 2012 - Present</div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
+                    </div>
+
+                    <div class="job-wrapper clearfix">
+                        <div class="experience-title">Front End Developer </div> <!-- JOB TITLE  -->
+                        <div class="company-description">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a elit facilisis,
+                                adipiscing leo in, dignissim magna.</p> <!-- JOB DESCRIPTION  -->
+                        </div>
+                    </div>
+
+                    <div class="company-wrapper clearfix">
+                        <div class="experience-title">Company name</div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
+                        <div class="time">Nov 2010 - Present</div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
+                    </div>
+
+                    <div class="job-wrapper clearfix">
+                        <div class="experience-title">Freelance, Web Designer / Web Developer</div> <!-- JOB TITLE  -->
+                        <div class="company-description">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a elit facilisis,
+                                adipiscing leo in, dignissim magna.</p> <!-- JOB DESCRIPTION  -->
+                        </div>
+                    </div>
+
+                    <div class="company-wrapper clearfix">
+                        <div class="experience-title">Company name</div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
+                        <div class="time">Nov 2009 - Nov 2010</div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
+                    </div>
+
+                    <div class="job-wrapper clearfix">
+                        <div class="experience-title">Web Designer </div> <!-- JOB TITLE  -->
+                        <div class="company-description">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a elit facilisis,
+                                adipiscing leo in, dignissim magna.</p> <!-- JOB DESCRIPTION  -->
+                        </div>
+                    </div>
+
+                </div>
+                <!--Skill experience-->
+
+                <div class="section-wrapper clearfix">
+                    <h3 class="section-title">Skills</h3> <!-- YOUR SET OF SKILLS  -->
+                    <ul>
+                        <li class="skill-percentage">HTML / HTML5</li>
+                        <li class="skill-percentage">CSS / CSS3 / SCSS</li>
+                        <li class="skill-percentage">Javascript</li>
+                        <li class="skill-percentage">Angular</li>
+                        <li class="skill-percentage">jQuery</li>
+                        <li class="skill-percentage">Photoshop</li>
+
+                    </ul>
+
+                </div>
+
+                <div class="section-wrapper clearfix">
+                    <h3 class="section-title">Hobbies</h3> <!-- DESCRIPTION OF YOUR HOBBIES -->
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a elit facilisis, adipiscing leo
+                        in, dignissim magna.</p>
+
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a elit facilisis, adipiscing leo
+                        in, dignissim magna.</p>
+                </div>
+
             </div>
-         </section>
-         <div class="clearfix"></div>
-      </div>
+        </section>
+
+        <div class="clearfix"></div>
+    </div>
