--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="container">
                 <div class="picture-resume-wrapper">
                     <div class="picture-resume">
-                        <span><img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="" /></span>
+                        <span><img src="https://avatars0.githubusercontent.com/u/9211987?v=3&s=460" alt="" /></span>
                         <svg version="1.1" viewBox="0 0 350 350">
 
                             <defs>
