--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Nikhil Raj A">
-    <meta name="description" content="UI/Front end Engineer">
-    <meta name="keywords" content="nikhilraj, nikhil, nikhilrajnair, nikhilraj a">
+    <meta name="description" content="UI/Frontend Engineer">
+    <meta name="keywords" content="nikhilraj, nikhil, nikhilrajnair, nikhilraj a, nikhil raj  a, nikhil raj">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" crossorigin="anonymous" />    <link rel="stylesheet" type="text/css"
-        href="style/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+        integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
+        crossorigin="anonymous" />
+    <link rel="stylesheet" type="text/css" href="style/main.css">
 </head>
 
 <body>
@@ -76,9 +77,10 @@
                 </div>
                 <div class="contact-presentation">
                     <!-- YOUR PRESENTATION RESUME  -->
-                    <p><span class="bold">Lorem</span> ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
-                        euismod congue nisi, nec consequat quam. In consectetur faucibus turpis eget laoreet. Sed nec
-                        imperdiet purus. </p>
+                    <p>Front-end web developer wFronmore than 5+ years experience in building and maintaining web
+                        applications and responsive websites using Angular, Typescript, Javascript, HTML , CSS , Angular
+                        Material etc. Also worked with React,Ionic and React Native as hybrid app developer. I am
+                        extremely passionate about learning new technologies. </p>
                 </div>
                 <div class="contact-social clearfix">
                     <ul class="list-titles">
@@ -88,9 +90,11 @@
                     </ul>
                     <ul class="list-content">
                         <!-- REMEMBER TO PUT THE URL ON THE HREF TAG  -->
-                        <li><a href="https://twitter.com/nikhilraj_a" target="_blank">@nikhilraj_a</a></li> <!-- YOUR TWITTER USER  -->
+                        <li><a href="https://twitter.com/nikhilraj_a" target="_blank">@nikhilraj_a</a></li>
+                        <!-- YOUR TWITTER USER  -->
                         <li><a href=""></a></li> <!-- YOUR DRIBBBLE USER  -->
-                        <li><a href="https://codepen.io/nikhilrajnair" target="_blank">nikhilrajnair</a></li> <!-- YOUR BEHANCE USER  -->
+                        <li><a href="https://codepen.io/nikhilrajnair" target="_blank">nikhilrajnair</a></li>
+                        <!-- YOUR BEHANCE USER  -->
                     </ul>
                 </div>
             </div>
@@ -102,41 +106,46 @@
 
                 <div class="experience-wrapper">
                     <div class="company-wrapper clearfix">
-                        <div class="experience-title">Company name</div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
-                        <div class="time">Nov 2012 - Present</div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
+                        <div class="experience-title">Mindtree</div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
+                        <div class="time">Aug 2021 - Present</div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
                     </div>
 
                     <div class="job-wrapper clearfix">
-                        <div class="experience-title">Front End Developer </div> <!-- JOB TITLE  -->
+                        <div class="experience-title">Module Lead </div> <!-- JOB TITLE  -->
                         <div class="company-description">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a elit facilisis,
-                                adipiscing leo in, dignissim magna.</p> <!-- JOB DESCRIPTION  -->
+                            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a elit facilisis,
+                                adipiscing leo in, dignissim magna.</p>  -->
+                            <!-- JOB DESCRIPTION  -->
                         </div>
                     </div>
 
                     <div class="company-wrapper clearfix">
-                        <div class="experience-title">Company name</div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
-                        <div class="time">Nov 2010 - Present</div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
+                        <div class="experience-title">Wellthy Therapeutics</div>
+                        <!-- NAME OF THE COMPANY YOUWORK WITH  -->
+                        <div class="time">Mar 2018 - Jul 2021</div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
                     </div>
 
                     <div class="job-wrapper clearfix">
-                        <div class="experience-title">Freelance, Web Designer / Web Developer</div> <!-- JOB TITLE  -->
+                        <div class="experience-title">Front-end Developer</div> <!-- JOB TITLE  -->
                         <div class="company-description">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a elit facilisis,
-                                adipiscing leo in, dignissim magna.</p> <!-- JOB DESCRIPTION  -->
+                                adipiscing leo in, dignissim magna.</p>
+                            <!-- JOB DESCRIPTION  -->
                         </div>
                     </div>
 
                     <div class="company-wrapper clearfix">
-                        <div class="experience-title">Company name</div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
-                        <div class="time">Nov 2009 - Nov 2010</div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
+                        <div class="experience-title">Codegreen Technologies LLP</div>
+                        <!-- NAME OF THE COMPANY YOUWORK WITH  -->
+                        <div class="time">Jan 2016 - Mar 2018</div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
                     </div>
 
                     <div class="job-wrapper clearfix">
-                        <div class="experience-title">Web Designer </div> <!-- JOB TITLE  -->
+                        <div class="experience-title">Web/UI Developer </div> <!-- JOB TITLE  -->
                         <div class="company-description">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a elit facilisis,
-                                adipiscing leo in, dignissim magna.</p> <!-- JOB DESCRIPTION  -->
+                            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a elit facilisis,
+                                adipiscing leo in, dignissim magna.</p> -->
+                            <!-- JOB DESCRIPTION  -->
                         </div>
                     </div>
 
@@ -156,18 +165,26 @@
                     </ul>
 
                 </div>
+                <!-- DESCRIPTION OF YOUR HOBBIES -->
 
+                <!-- 
                 <div class="section-wrapper clearfix">
-                    <h3 class="section-title">Hobbies</h3> <!-- DESCRIPTION OF YOUR HOBBIES -->
+                    <h3 class="section-title">Hobbies</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a elit facilisis, adipiscing leo
                         in, dignissim magna.</p>
 
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a elit facilisis, adipiscing leo
                         in, dignissim magna.</p>
-                </div>
+                </div> -->
 
             </div>
         </section>
 
         <div class="clearfix"></div>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
+</body>
+
+</html>
