--- a/index.html
+++ b/index.html
@@ -66,13 +66,17 @@
                         <li>Call</li>
                         <li>Mail</li>
                         <li>Web</li>
-                        <li>Home</li>
+                        <li>Codepen</li>
+
+                        <li>Twitter</li>
                     </ul>
                     <ul class="list-content ">
                         <li>+91 8714406672</li> <!-- YOUR PHONE NUMBER  -->
                         <li>nikhilrajnair.a@gmail.com</li> <!-- YOUR EMAIL -->
                         <li><a href="#">https://nikhilrajnair.github.io</a></li> <!-- YOUR WEBSITE  -->
-                        <li>Kerala</li> <!-- YOUR STATE AND COUNTRY  -->
+                        <li><a href="https://codepen.io/nikhilrajnair" target="_blank">nikhilrajnair</a></li>
+                        <li><a href="https://twitter.com/nikhilraj_a" target="_blank">@nikhilraj_a</a></li>
+                        <!-- YOUR STATE AND COUNTRY  -->
                     </ul>
                 </div>
                 <div class="contact-presentation">
@@ -84,17 +88,10 @@
                 </div>
                 <div class="contact-social clearfix">
                     <ul class="list-titles">
-                        <li>Twitter</li>
-                        <!-- <li>Dribbble</li> -->
-                        <li>Codepen</li>
+
                     </ul>
                     <ul class="list-content">
-                        <!-- REMEMBER TO PUT THE URL ON THE HREF TAG  -->
-                        <li><a href="https://twitter.com/nikhilraj_a" target="_blank">@nikhilraj_a</a></li>
-                        <!-- YOUR TWITTER USER  -->
-                        <li><a href=""></a></li> <!-- YOUR DRIBBBLE USER  -->
-                        <li><a href="https://codepen.io/nikhilrajnair" target="_blank">nikhilrajnair</a></li>
-                        <!-- YOUR BEHANCE USER  -->
+
                     </ul>
                 </div>
             </div>
@@ -113,8 +110,7 @@
                     <div class="job-wrapper clearfix">
                         <div class="experience-title">Module Lead </div> <!-- JOB TITLE  -->
                         <div class="company-description">
-                            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a elit facilisis,
-                                adipiscing leo in, dignissim magna.</p>  -->
+                            <p>Working as a Module Lead in Mindtree</p>
                             <!-- JOB DESCRIPTION  -->
                         </div>
                     </div>
@@ -128,14 +124,20 @@
                     <div class="job-wrapper clearfix">
                         <div class="experience-title">Front-end Developer</div> <!-- JOB TITLE  -->
                         <div class="company-description">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a elit facilisis,
-                                adipiscing leo in, dignissim magna.</p>
+                            <p>Involved in designing the user experience interface UI/UX strategy, UI requirements,
+                                converting findings into UI designs
+                                Designed and developed the application using Angular framework along with HTML5, CSS3,
+                                TypeScript, JavaScript, Bootstrap, Angular Material Etc.
+                                Experience in CSS pixel-level layout, Consistency with browsers, Version and Platform
+                                Independence
+                                Used JIRA to keep track of bugs to reduce downtime, increase productivity, and improve
+                                communication.</p>
                             <!-- JOB DESCRIPTION  -->
                         </div>
                     </div>
 
                     <div class="company-wrapper clearfix">
-                        <div class="experience-title">Codegreen Technologies LLP</div>
+                        <div class="experience-title">Codegreen Technologies</div>
                         <!-- NAME OF THE COMPANY YOUWORK WITH  -->
                         <div class="time">Jan 2016 - Mar 2018</div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
                     </div>
@@ -143,8 +145,12 @@
                     <div class="job-wrapper clearfix">
                         <div class="experience-title">Web/UI Developer </div> <!-- JOB TITLE  -->
                         <div class="company-description">
-                            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a elit facilisis,
-                                adipiscing leo in, dignissim magna.</p> -->
+                            <p>
+                                Created Responsive Designs (Mobile/Tablet/Desktop) using HTML & CSS, Bootstrap.
+                                Worked on Cross-Browser Compatibility and tested each & Every web application on
+                                popular web browsers such as Chrome, Firefox, Safari, Opera and Edge,
+                                Used Media Queries to deal with different CSS related issues on different devices.
+                            </p>
                             <!-- JOB DESCRIPTION  -->
                         </div>
                     </div>
@@ -167,8 +173,8 @@
                 </div>
                 <!-- DESCRIPTION OF YOUR HOBBIES -->
 
-                <!-- 
-                <div class="section-wrapper clearfix">
+
+                <!-- <div class="section-wrapper clearfix">
                     <h3 class="section-title">Hobbies</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a elit facilisis, adipiscing leo
                         in, dignissim magna.</p>
