Back to old website

--- a/old/index.html
+++ b/old/index.html
@@ -19,7 +19,7 @@
         <div class="row">
             <div class="col-md-12">
                 <h1 class="text-center mt-5">
-                   <a href="https://nikhilrajnair.github.io/portfolio/home">Please Click Here😀</a></h1>
+                   <a href="https://nikhilrajnair.github.io/portfolio/home">All the way from here😀</a></h1>
             </div>
         </div>
     </div>
